# verifiable-eval

./: CHECKS.md  LICENSE  LIMITATIONS.md  README.md  REVIEW_LOG.md  SPEC.md  pyproject.toml
docs/: FAMILY_OVERLAP.md
goldens/input/: eval_config.json  trace_clean.jsonl  trace_tampered.jsonl
goldens/output/: certificate.json  verify_fail.txt  verify_pass.txt
schemas/: certificate.schema.json  eval_config.schema.json  srsef-v1.yaml  trace_entry.schema.json
src/verifiable_eval/: __init__.py  certificate.py  cli.py  config.py  family_overlap.py  llm_judge.py  models.py  runner.py  trace_logger.py  verify.py
tests/: test_verifiable_eval.py
